--- a/class/index1.html
+++ b/class/index1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Shruti</h1>
-    <P>LETS START CODING</P>
+    <h1>MY NAME IS SHRUTI GOYAL</h1>
+    <H2>I AM A FULL STACK DEVELOPER</H2>
 </body>
 </html>
